--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@
   font-size: 12px;
   display: inline-block;
   padding: 5px;
-  margin: 0 5px;
+  margin: 5px 5px;
   border-radius: 2px;
 }
 .ReactTags__selected a.ReactTags__remove {
